# gpnmgr

./: .gitignore  .pylintrc  Dockerfile  mypy.ini  pyproject.toml  renovate.json
.github/workflows/: build_publish_docker.yaml
src/: README.md  manage.py
src/bootstrap/: settings.py
src/gpnmgr/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
src/gpnmgr/accounts/: tests.py
src/gpnmgr/accounts/fixtures/: users.json
src/gpnmgr/accounts/migrations/: 0001_initial.py  0002_user_object_dn.py
src/gpnmgr/accounts/models/: user.py
src/gpnmgr/accounts/templates/: landing_page.html
src/gpnmgr/accounts/templates/accounts/: user_detail.html
src/gpnmgr/accounts/urls/: __init__.py
src/gpnmgr/accounts/views/: auth.py  autocomplete_search.py  landing_page.py  profile.py
src/gpnmgr/log/templates/log/: log_list.html
src/gpnmgr/log/urls/: __init__.py
src/gpnmgr/log/views/: log.py
src/gpnmgr/static/css/: app.css
src/gpnmgr/teams/: apps.py
src/gpnmgr/teams/fixtures/: teams.json
src/gpnmgr/teams/forms/: add_member_form.py
src/gpnmgr/teams/management/commands/: import_ldap_groups.py  (+1 more)
src/gpnmgr/teams/migrations/: 0001_initial.py
src/gpnmgr/teams/models/: __init__.py  team.py
src/gpnmgr/teams/signals/: __init__.py  team.py
src/gpnmgr/teams/urls/: __init__.py
src/gpnmgr/teams/views/: teams.py
src/gpnmgr/templates/: 403.html  404.html  405.html  base.html  top_nav.html
src/gpnmgr/utils/context_processors/: __init__.py
src/gpnmgr/utils/templatetags/: changelog.py  fa_checkbox.py
src/locale/de/LC_MESSAGES/: django.mo  django.po
(+5 files in other folders)
